--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -79,6 +79,16 @@ body{
 
 }
 
+.errmsg{
+  font-size: 2em;
+  z-index: 0;
+  position: absolute;
+  width: 600px;
+  height: 80px;
+  left:  calc(50% - 75px);
+  top:  calc(30% - 50px);
+}
+
 
 .login{
   position: absolute;
