--- a/css/screen.css
+++ b/css/screen.css
@@ -11,7 +11,6 @@ body {
   color: #fff;
   font-family: 'Exo', sans-serif;
   font-size: 13px;
-  overflow: hidden;
 }
 
 .body {
@@ -239,4 +238,9 @@ body {
 
 .logout {
   right: 20px;
+}
+
+.middle {
+  padding-left: 50px;
+  padding-right: 50px;
 }
