--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -15,7 +15,7 @@ body{
   color: #fff;
   font-family: 'Exo', sans-serif;
   font-size: 13px;
-  overflow: hidden;
+
 }
 
 .body{
@@ -242,4 +242,10 @@ body{
 
 .logout{
   right: 20px;
+}
+
+.middle{
+
+  padding-left: 50px;
+  padding-right: 50px;
 }
