--- a/css/dragdrop.css
+++ b/css/dragdrop.css
@@ -2,6 +2,10 @@
  * The dnd-list should always have a min-height,
  * otherwise you can't drop to it once it's empty
  */
+.content{
+    overflow: auto;
+}
+
 .simpleDemo ul[dnd-list] {
     min-height: 42px;
     padding-left: 0px;
