--- a/css/screen.css
+++ b/css/screen.css
@@ -11,6 +11,7 @@ body {
   color: #fff;
   font-family: 'Exo', sans-serif;
   font-size: 13px;
+  overflow: hidden;
 }
 
 .body {
@@ -255,4 +256,14 @@ body {
 
 .projectdialog {
   width: 400px;
+  z-index: 5;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.close {
+  width: 100%;
+  height: 100%;
 }
