--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -15,6 +15,7 @@ body{
   color: #fff;
   font-family: 'Exo', sans-serif;
   font-size: 13px;
+  overflow: hidden;
 }
 
 .body{
@@ -260,4 +261,14 @@ body{
 
 .projectdialog{
   width: 400px;
+  z-index: 5;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.close{
+  width: 100%;
+  height: 100%;
 }
