--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -2,13 +2,10 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
-
-
 @import url(https://fonts.googleapis.com/css?family=Exo:100,200,400);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
 
-body{
+body {
   margin: 0;
   padding: 0;
   background: #fff;
@@ -18,7 +15,7 @@ body{
   overflow: hidden;
 }
 
-.body{
+.body {
   position: absolute;
   top: -20px;
   left: -20px;
@@ -33,7 +30,7 @@ body{
 
 }
 
-.grad{
+.grad {
   position: absolute;
   top: -20px;
   left: -20px;
@@ -41,19 +38,19 @@ body{
   bottom: -40px;
   width: auto;
   height: auto;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.65))); /* Chrome,Safari4+ */
   z-index: 1;
   opacity: 0.7;
 }
 
-.header{
+.header {
   position: absolute;
   top: calc(46% - 35px);
   left: calc(50% - 255px);
   z-index: 2;
 }
 
-.header div{
+.header div {
   float: left;
   color: #fff;
   font-family: 'Exo', sans-serif;
@@ -61,15 +58,15 @@ body{
   font-weight: 200;
 }
 
-.header div span{
+.header div span {
   color: #5379fa !important;
 }
 
-.link_register{
-  margin-top:10px;
+.link_register {
+  margin-top: 10px;
 }
 
-.register{
+.register {
   position: absolute;
   top: calc(27% - 75px);
   left: calc(37% - 50px);
@@ -80,18 +77,17 @@ body{
 
 }
 
-.errmsg{
+.errmsg {
   font-size: 2em;
   z-index: 0;
   position: absolute;
   width: 600px;
   height: 80px;
-  left:  calc(50% - 75px);
-  top:  calc(30% - 50px);
+  left: calc(50% - 75px);
+  top: calc(30% - 50px);
 }
 
-
-.login{
+.login {
   position: absolute;
   top: calc(50% - 75px);
   left: calc(50% - 50px);
@@ -101,11 +97,11 @@ body{
   z-index: 2;
 }
 
-.login input[type=text]{
+.login input[type=text] {
   width: 250px;
   height: 30px;
   background: transparent;
-  border: 1px solid rgba(255,255,255,0.6);
+  border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 2px;
   color: #fff;
   font-family: 'Exo', sans-serif;
@@ -114,11 +110,11 @@ body{
   padding: 4px;
 }
 
-.login input[type=password]{
+.login input[type=password] {
   width: 250px;
   height: 30px;
   background: transparent;
-  border: 1px solid rgba(255,255,255,0.6);
+  border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 2px;
   color: #fff;
   font-family: 'Exo', sans-serif;
@@ -128,7 +124,7 @@ body{
   margin-top: 10px;
 }
 
-.login input[type=button]{
+.login input[type=button] {
   width: 260px;
   height: 35px;
   background: #fff;
@@ -143,33 +139,33 @@ body{
   margin-top: 10px;
 }
 
-.login input[type=button]:hover{
+.login input[type=button]:hover {
   opacity: 0.8;
 }
 
-.login input[type=button]:active{
+.login input[type=button]:active {
   opacity: 0.6;
 }
 
-.login input[type=text]:focus{
+.login input[type=text]:focus {
   outline: none;
-  border: 1px solid rgba(255,255,255,0.9);
+  border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
-.login input[type=password]:focus{
+.login input[type=password]:focus {
   outline: none;
-  border: 1px solid rgba(255,255,255,0.9);
+  border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
-.login input[type=button]:focus{
+.login input[type=button]:focus {
   outline: none;
 }
 
-.inputsregister input[type=text]{
+.inputsregister input[type=text] {
   width: 250px;
   height: 30px;
   background: transparent;
-  border: 1px solid rgba(255,255,255,0.6);
+  border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 2px;
   color: #fff;
   font-family: 'Exo', sans-serif;
@@ -179,11 +175,11 @@ body{
   margin: 5px;
 }
 
-.inputsregister input[type=password]{
+.inputsregister input[type=password] {
   width: 250px;
   height: 30px;
   background: transparent;
-  border: 1px solid rgba(255,255,255,0.6);
+  border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 2px;
   color: #fff;
   font-family: 'Exo', sans-serif;
@@ -193,7 +189,7 @@ body{
   margin-top: 10px;
 }
 
-.inputsregister input[type=button]{
+.inputsregister input[type=button] {
   width: 260px;
   height: 35px;
   background: #fff;
@@ -209,56 +205,58 @@ body{
   margin-left: 162px;
 }
 
-.inputsregister input[type=button]:hover{
+.inputsregister input[type=button]:hover {
   opacity: 0.8;
 }
 
-.inputsregister input[type=button]:active{
+.inputsregister input[type=button]:active {
   opacity: 0.6;
 }
 
-.inputsregister input[type=text]:focus{
+.inputsregister input[type=text]:focus {
   outline: none;
-  border: 1px solid rgba(255,255,255,0.9);
+  border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
-.inputsregister input[type=password]:focus{
+.inputsregister input[type=password]:focus {
   outline: none;
-  border: 1px solid rgba(255,255,255,0.9);
+  border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
-.inputsregister input[type=button]:focus{
+.inputsregister input[type=button]:focus {
   outline: none;
 }
 
-::-webkit-input-placeholder{
-  color: rgba(255,255,255,0.6);
+::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
 }
 
-::placeholder{
-  color: rgba(255,255,255,0.6);
+::placeholder {
+  color: rgba(255, 255, 255, 0.6);
 }
 
-.error { color: red; }
+.error {
+  color: red;
+}
 
-.logout{
+.logout {
   right: 20px;
 }
 
-.middle{
+.middle {
 
   padding-left: 50px;
   padding-right: 50px;
 }
 
-.buttonbar{
+.buttonbar {
   min-height: 44px;
   text-align: center;
   top: 60px;
 
 }
 
-.projectdialog{
+.projectdialog {
   width: 400px;
   z-index: 5;
 }
@@ -267,7 +265,21 @@ body{
   display: none;
 }
 
-.close{
+.close {
   width: 100%;
   height: 100%;
+}
+
+
+
+
+@media screen and (max-width: 993px) {
+
+  /* These are just alternative ways of hiding an element */
+  .screenhidden {
+    display: none !important;
+    position: absolute;
+  }
+
+
 }
